themes/lost-theme/assets/css/main.css
/* ... */
dialog p {
	margin-bottom: 1.5rem;
	white-space: wrap;
	color: var(--gray-0F);
	font-size: 1rem;
}

dialog button {
	margin: 0 0.5rem;
	text-align: right;
}

dialog::backdrop {
	background-color: color-mix(in srgb, var(--bg) 67%, transparent);
	backdrop-filter: blur(4px);
}

details {
	&::details-content {
		overflow: hidden;
		block-size: 0;
		transition: block-size var(--shorter), content-visibility var(--shorter);
		transition-behavior: allow-discrete;
	}
	&[open] {
		&::details-content {
			block-size: auto;
		}
	}
	& > summary {
		&::marker {
			color: var(--accent);
		}
	}
	&:has(.gallery):not([open]) {
		> summary::marker {
			animation: blink var(--longer) ease-in-out infinite;
		}
	}
}

h1, h2, h3, h4, h5, h6 {
	margin-bottom: calc(var(--xs) * 2vh); /*8px*/
	font-family: 'Josefin Sans', sans-serif; /*font-family: 'Bree Serif', serif;*/
	color: var(--accent);
}

h1 {
	font-size: 2.5rem;
}

hgroup {
	display: block;
	padding: 2px 0;
	line-height: 1;
	text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.33);

	& a:focus-visible {
		outline-width: 1px;
		outline-offset: -1px;
		outline-style: dashed;
	}
}

hr {
	height: 2px;
	margin: 0.5em 0;
	border: 1px solid var(--veiled);
	background-color: var(--veiled);
}

li {
	list-style-type: "• "; /* "● ", "◦ ", "•\002009" */
	/*list-style-position: inside;*/

	&::marker {
		color: var(--accent);
	}
}

p {
	margin-bottom: calc(var(--xs) * 2vh); /*8px*/
	font-size: 1rem;
	line-height: 1.5;
}

select {
	/*
	appearance: base-select;

	&::picker(select) {
	appearance: base-select;
	}
	*/
}

table {
	container-type: inline-size;
	width: 100%;
	margin-bottom: 8px;
	font-size: smaller;
	font-size: clamp(0.5em, 4.5cqw, 1em);
	line-height: clamp(1.16em, 4.5cqw, 1.33em);
	/*border-collapse: collapse;*/
	border-spacing: 0;
	border-radius: var(--round);
	border: 1px solid var(--gray-A5);
	overflow: hidden;

	& tr:nth-child(odd), th td {
		background-color: rgba(128, 128, 128, 0.1);
	}
	& tr:last-child td {
		border-bottom: none;
	}
	& tfoot td {
		border-top: 1px solid var(--gray-A5);
	}
}

th, td {
	/*container-type: inline-size;*/
	padding: 0.2em 0.4em;
	border-right: 1px solid var(--gray-A5);
	border-bottom: 1px solid var(--gray-A5);
	/*line-height: 0;*/ /* Alternative to `display: block` for no bottom padding (hacky) */
	
	& th {
		vertical-align: center;
	}
	& td {
		vertical-align: top;
	}
	&:last-child {
		border-right: none;
	} 
	& img {
		/*vertical-align: sub;*/ /* NOTE: Don't remember why I added this here... */
	}
}


/*************/
/* SELECTORS */
/*************/

.container {
	display: flex;
	height: 100%;
	width: 100%;
}

.wrap {
	display: flex;
	gap: 1.25rem;
	justify-content: space-between;
	height: 100%;
	align-items: center;
	vertical-align: middle;
}

#header-left {
	container: nav / inline-size;
	width: var(--header-left-w);
	min-width: var(--header-left-w-min);
	max-width: var(--nav-w-max);
	padding: 0 2px;
	gap: 8px;
	background: linear-gradient(to left, rgba(0,0,0,0.1) 0%, transparent 33.3%);
}

#header-right {
	container: inline-size;
	flex: 1 1 auto;
	gap: clamp(0.75rem, 1.5cqw, 1.25rem);
	overflow: hidden;
	/*mask-image: linear-gradient(to left, transparent, black calc(var(--scroll) * 1.33));*/
	/*background: linear-gradient(to right, rgba(0, 0, 0, 0.15) 0%, transparent 33.3%);*/
	background-color: inherit;

	& #banner {
		container: banner / inline-size;
		flex: 0.75 0 auto;
		place-content: center;
		height: 80%;
		/*max-width: max-content;*/
		min-width: 20%;
		margin: 2px auto;
		padding: 0 2%;
		overflow: hidden;
		line-height: 1.25cqw;
		text-align: center;
		border-radius: var(--round);
		box-shadow: -1px 1px 2px 1px rgba(0, 0, 0, 0.67) inset;
		background-image: repeating-linear-gradient(-45deg, rgb(from var(--text-inv) r g b / 50%) 0 10px, rgb(from var(--accent) r g b / 50%) 10px 20px);

		& span {
			font-size: small; /* fallback for unsupported browsers ↴ */
			font-size: clamp(0.45em, 9cqw, 0.9em);
			font-weight: bold;
			line-height: clamp(0.45em, 9cqw, 0.9em);
			white-space: wrap;
			text-shadow: 1px 1px 4px var(--text-inv);
			user-select: none;
		}
	}
	& #tweaker {
		justify-content: flex-end;
		flex: 0.5 1 auto;
		gap: inherit;
		padding-inline: 8px var(--scroll);
		overflow-y: visible;
	}
	& >:not(:last-child) {
		/*margin-right: 16px;*/
	}
}

#logo {
	display: initial;
	width: initial;
}

#logo-alt {
	display: none;
	width: 0;
}
/* ... */

